# ChangeLog for sys-fs/udev
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.690 2012/07/04 21:03:12 williamh Exp $

*udev-186 (04 Jul 2012)

  04 Jul 2012; William Hubbs <williamh@gentoo.org> +udev-186.ebuild:
  version bump. I would like to thank Jonathan Callen for his assistance
  with this ebuild.

  03 Jul 2012; Jeroen Roovers <jer@gentoo.org> udev-171-r6.ebuild:
  Stable for HPPA (bug #416653).

  28 May 2012; Markus Meier <maekke@gentoo.org> udev-171-r6.ebuild:
  arm stable, bug #416653

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> udev-171-r6.ebuild:
  marked x86 per bug 416653

  20 May 2012; Samuli Suominen <ssuominen@gentoo.org> udev-171-r6.ebuild:
  ppc/ppc64 stable wrt #416653

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> udev-171-r6.ebuild:
  Stable for amd64, wrt bug #416653

*udev-171-r6 (17 May 2012)

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> +udev-171-r6.ebuild:
  Remove USE="acl" and from USE="extras" since the functionality is moved to
  >=sys-auth/consolekit-0.4.5_p20120320[acl].

  16 May 2012; Samuli Suominen <ssuominen@gentoo.org> udev-146-r1.ebuild,
  udev-149.ebuild, udev-151-r4.ebuild:
  Apply udev-164-remove-v4l1.patch to every old sys-fs/udev ebuild with
  USE="extras" wrt #413055 by Andreis_Vinogradovs

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> udev-149.ebuild,
  udev-151-r4.ebuild, udev-164-r2.ebuild, udev-171-r5.ebuild,
  udev-182-r2.ebuild, udev-182-r3.ebuild, udev-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Apr 2012; Mike Frysinger <vapier@gentoo.org> udev-146-r1.ebuild,
  udev-149.ebuild, udev-151-r4.ebuild, udev-164-r2.ebuild, udev-171-r5.ebuild,
  udev-182-r2.ebuild, udev-182-r3.ebuild, udev-9999.ebuild:
  Do not depend on glibc -- block older versions only.

  21 Apr 2012; Mike Frysinger <vapier@gentoo.org> udev-182-r3.ebuild:
  Restore ~arch keywords #410401.
