@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.690 2012/07/04 21:03:12 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.691 2012/07/05 17:11:15 williamh Exp $
+
+  05 Jul 2012; William Hubbs <williamh@gentoo.org> udev-186.ebuild:
+  add back dependencies that were unintentionally removed for bug #424874,
+  thanks to Nikoli.
 
 *udev-186 (04 Jul 2012)
 
